2010-04-27  Jeffrey Stedfast  <fejj@novell.com>

	* curl/*.cpp|h: Updated for API changes.

	* browser-bridge.h (BrowserBridge): Make the plugin and
	shutting_down members private and provide accessors for them.

2010-04-09  Andreia Gaita  <avidigal@novell.com>

	* browser-bridge.h: fix premature abortion due to missing
	initialization

2010-03-22  Andreia Gaita  <avidigal@novell.com>

	* browser-bridge.h: Add Shutdown method
	* plugin.cpp: (Shutdown) call the bridge Shutdown method

2010-03-19  Andreia Gaita  <avidigal@novell.com>

	* plugin-entry.cpp: don't touch Deployment on NPN_Mem* calls, the
	curl backend calls them on side threads

2010-03-03  Andreia Gaita  <avidigal@novell.com>

	* plugin.cpp: If available, load the curl backend by default for
	all non-ff browsers

2010-02-26  Andreia Gaita  <avidigal@novell.com>

	* Makefile.am: fix conditional compilation of the bridges, and
	add missing ff36 lib copy

2010-02-26  Andreia Gaita  <avidigal@novell.com>

	* Makefile.am: add bridge/ subdir to the build
	* browser-bridge.h: save a ref to the plugin, the curl bridge
	needs it to add tick calls
	* plugin.cpp: (Shutdown) kill the bridge only after shutting
	down the deployment, because it aborts downloaders and the curl
	bridge downloaders need to know if the plugin is shutting down to
	know if they can safely remove tick callbacks
	(Initialize) If the curl bridge is available and activated via
	the env flag, then load it regardless of browser

2010-02-16  Larry Ewing  <lewing@novell.com>

	* plugin.cpp (StreamAsFile): work around some opera evilness and
	avoid a crash where stream->url is lost out from under us.

	Allows Opera to start up moonlight and load the chess app.

2010-02-16  Andreia Gaita  <avidigal@novell.com>

	* plugin.cpp: dup the values coming in from the object tag, chrome
	throws them away immediately

2010-02-13  Larry Ewing  <lewing@novell.com>

	* plugin.cpp, plugin.h: add an instance flag that helps us decide